Enhance README with architecture and implementation details
Added system architecture diagram and implementation details for SIMD-accelerated distance calculation. Updated getting started instructions and performance benchmarks.